--- a/index.html
+++ b/index.html
@@ -6,28 +6,28 @@
   <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-  <section class="output">character</section>
-  <section class="buttons">
-    <div class="clear">C</div>
-    <div class="plus/minus">+/-</div>
-    <div class="percentage">%</div>
-    <div class="divide">/</div>
-    <div class="seven">7</div>
-    <div class="eight">8</div>
-    <div class="nine">9</div>
-    <div class="times">x</div>
-    <div class="four">4</div>
-    <div class="five">5</div>
-    <div class="six">6</div>
-    <div class="minus">-</div>
-    <div class="one">1</div>
-    <div class="two">2</div>
-    <div class="three">3</div>
-    <div class="plus">+</div>
-    <div class="love">:)</div>
-    <div class="zero">0</div>
-    <div class="decimal">.</div>
-    <div class="equals">=</div>
+    <header ID="output"></header>
+    <section class="buttons">
+      <span class="clear">C</span>
+      <span class="plus-minus">&plusmn;</span>
+      <span class="percentage">%</span>
+      <span class="divide">&divide;</span>
+      <span class="seven">7</span>
+      <span class="eight">8</span>
+      <span class="nine">9</span>
+      <span class="times">&times;</span>
+      <span class="four">4</span>
+      <span class="five">5</span>
+      <span class="six">6</span>
+      <span class="minus">&minus;</span>
+      <span class="one">1</span>
+      <span class="two">2</span>
+      <span class="three">3</span>
+      <span class="plus">+</span>
+      <span class="zero">0</span>
+      <span class="decimal">.</span>
+      <span class="equals">=</span>
   </section>
+  <script type="text/javascript" src="js/main.js"></script>
 </body>
 </html>
